fix activity pic overflow hidden

--- a/scss/modules/activity.scss
+++ b/scss/modules/activity.scss
@@ -3,6 +3,7 @@
         .item-activity {
             padding-bottom: 0;
             min-height: 95px !important;
+            overflow: hidden;
 
             .avatar {
                 height: auto !important;
